<resources>
    <string name="app_name">Помощник куратору</string>
    <string name="tab_text_1">Личное</string>
    <string name="tab_text_2">Контакты</string>
    <string name="tab_text_3">Пароль</string>
    <string name="tab_text_4">Тип записи</string>

    <string name="title_activity_tab">TabActivity</string>
    <string name="title_teachers">Учителя</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_uspevaemost">Успеваемость</string>
    <string name="title_olimps">Олимпиады</string>
    <string name="title_time_table">Расписание</string>
    <string name="title_itog_mark">Итоговые оценки</string>
    <string name="title_information">Информация</string>
    <string name="title_re_akkaunt">Смена аккаунта</string>

    <string name="chat_menu_back">Назад</string>
    <string name="chat_menu_settings">Настройки</string>

    <string name="pref_out">Выйти</string>
    <string name="pref_add">Добавить</string>
    <string name="pref_clear">Очистить</string>
    <string name="pref_sound">Звук</string>

    <string-array name="cat_names">
        <item>Рыжик</item>
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Мурка</item>
        <item>Васька</item>
        <item>Томасина</item>
        <item>Кристина</item>
        <item>Пушок</item>
        <item>Дымка</item>
        <item>Кузя</item>
        <item>Китти</item>
        <item>Масяня</item>
        <item>Симба</item>
    </string-array>
</resources>
